<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phone_number_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@android:color/black"
            android:hint="@string/phone_number_register_hint"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/black"
            android:hint="@string/name_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@android:color/black"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/confirm_password_register"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@android:color/black"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            app:passwordToggleEnabled="true"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/hint_text_input"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/hint_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:backgroundTint="@android:color/black"
            android:hint="@string/hint_text_register"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:background="@android:color/holo_orange_light"
            android:padding="20dp"
            android:text="@string/register_button"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>