<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateEditItemFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/item_title_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_url"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/item_url_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_username"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/item_username_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_pwd"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/item_pwd_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_notes"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/item_notes_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/create_edit_item_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_item_button"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>