<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/phone_for_pwd_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_text_input"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="25dp"/>
        <EditText
            android:id="@+id/hint_for_pwd_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_register"
            android:textColorHint="@android:color/black"
            android:inputType="text"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>