<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/splash_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/holo_orange_dark"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/phone_number_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:textSize="20sp"
            android:text="000111222"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            app:backgroundTint="@android:color/black"
            android:inputType="phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/forgot_pwd_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd_link"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="15sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textSize="20sp"
            android:text="111"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            app:backgroundTint="@android:color/black"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="bottom"
            android:padding="20dp"
            android:text="@string/sign_in_button"
            android:focusable="true"
            android:background="@android:color/holo_orange_light"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:focusable="true"
            android:clickable="true"
            android:layout_gravity="center"
            android:text="@string/sign_up_link"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="30dp"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>