<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_pwd"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/current_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/black"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="25dp"/>
        <EditText
            android:id="@+id/new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/black"
            android:inputType="text"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_pwd"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="25dp"/>
        <EditText
            android:id="@+id/confirm_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/black"
            android:inputType="text"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>