<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.passwordsaverb.fragments.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.passwordsaverb.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_item"
            app:destination="@id/nav_item" />
        <action
            android:id="@+id/action_nav_home_to_nav_tools2"
            app:destination="@id/nav_tools" />
    </fragment>

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.passwordsaverb.fragments.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" >

        <action
            android:id="@+id/action_nav_category_to_nav_create_edit_item"
            app:destination="@id/nav_create_edit_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.passwordsaverb.fragments.ToolsFragment"
        android:label="@string/menu_tool"
        tools:layout="@layout/fragment_tools" >
        <action
            android:id="@+id/action_nav_tools_to_nav_login"
            app:destination="@id/nav_login"
            app:popUpTo="@+id/nav_login"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/nav_create_edit_item"
        android:name="com.example.passwordsaverb.fragments.CreateEditItemFragment"
        android:label="@string/menu_create_item"
        tools:layout="@layout/fragment_create_edit_item">

        <action
            android:id="@+id/action_nav_create_edit_item_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_item"
        android:name="com.example.passwordsaverb.fragments.ItemFragment"
        android:label="fragment_item"
        tools:layout="@layout/fragment_item" >
        <argument android:name="categoryName"/>
        <argument android:name="action"/>
        <argument android:name="itemKey"/>
        <action
            android:id="@+id/action_nav_item_to_nav_create_edit_item"
            app:destination="@id/nav_create_edit_item" />
        <action
            android:id="@+id/action_nav_item_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>